[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chumpy"
dynamic = ["version"]
description = "chumpy"
readme = "README.md"
requires-python = ">=2.7"
license = {text = "MIT"}
authors = [
    {name = "Matthew Loper", email = "matt.loper@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.8.1",
    "scipy>=0.13.0",
    "six>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/mattloper/chumpy"

[tool.setuptools]
packages = ["chumpy"]

[tool.setuptools.dynamic]
version = {attr = "chumpy.version.version"}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

